Crash with skin and remesh modifier in edit mode. #36141

Closed
opened 2013-07-14 20:29:58 +02:00 by Marek Moravec · 4 comments

%%%--- Operating System, Graphics card ---
Win7 64bit; Nvidia GForce 560

- Blender version with error, and version that worked ---

Crash: Blender 2.68 RC1
Does not work (but no crash): Blender 2.67

- Short description of error ---

Blender crashes when I add a mesh without faces (only verts and edges) and I add a skin modifier, then a remesh modifier and I check the "show in edit mode" button and enter the edit mode. With the Blender 2.67 it didn't show the result but didn't crash as well. Meshes with one face or more work well.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached Remesh_Edit.blend and press Tab to enter edit mode - 2.68 RC1 crashes.

%%%

%%%--- Operating System, Graphics card --- Win7 64bit; Nvidia GForce 560 - Blender version with error, and version that worked --- Crash: Blender 2.68 RC1 Does not work (but no crash): Blender 2.67 - Short description of error --- Blender crashes when I add a mesh without faces (only verts and edges) and I add a skin modifier, then a remesh modifier and I check the "show in edit mode" button and enter the edit mode. With the Blender 2.67 it didn't show the result but didn't crash as well. Meshes with one face or more work well. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached Remesh_Edit.blend and press Tab to enter edit mode - 2.68 RC1 crashes. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r58247.%%%

%%%fixed r58247.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%fixed r58248%%%

%%%fixed r58248%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36141
No description provided.