fix regression [#36141] Crash with skin and remesh modifier in edit mode.